--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100%;
+  max-width: 600px;
 }
 .appTitle {
   font-family: inherit;
